// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card> Background 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  background: red;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        good
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card> bordered  1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  border-radius: 10px;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> css Object style 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  background: #f5f5f5;
  width: 300px;
  background: red;
}

.emotion-0:hover {
  background: blue;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> empty snapshot 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> glass 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  background: #f5f5f5;
  background: rgba( 255, 255, 255, 0.2);
  -webkit-backdrop-filter: blur( 4px );
  backdrop-filter: blur( 4px );
  -webkit-backdrop-filter: blur( 4px );
  border: 1px solid rgba( 255, 255, 255, 0.18 );
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        good
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card> glassOption 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  background: #f5f5f5;
  background: rgba( 255, 255, 255, 0.2);
  -webkit-backdrop-filter: blur( 10px );
  backdrop-filter: blur( 10px );
  -webkit-backdrop-filter: blur( 10px );
  border: 1px solid rgba( 255, 255, 255, 0.18 );
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        good
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card> outlined  1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> outlined && bordered 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  border-radius: 10px;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;
